updated the swagger documentation
